exports[`getCliOpts produces an error when an option is not given to -k / --cache 1`] = `
Array [
  Array [
    "option requires an argument -- k
",
  ],
]
`;

exports[`print Functions printBanner prints socket REPL info in addition to the banner if -n specified 1`] = `
Array [
  Array [
    "Lumo X.X.X
ClojureScript clojurescript-version
 Docs: (doc function-name-here)
 Exit: Control+D or :cljs/quit or exit

",
  ],
  Array [
    "Lumo socket REPL listening at localhost:5555.
",
  ],
]
`;

exports[`print Functions printBanner should print the banner to stdout 1`] = `
Array [
  Array [
    "Lumo X.X.X
ClojureScript clojurescript-version
 Docs: (doc function-name-here)
 Exit: Control+D or :cljs/quit or exit

",
  ],
]
`;

exports[`print Functions printHelp should print the help text to stdout 1`] = `
Array [
  Array [
    "Lumo X.X.X
Usage:  lumo [init-opt*] [main-opt] [arg*]

  With no options or args, runs an interactive Read-Eval-Print Loop

  init options:
    -i, --init path              Load a file or resource
    -e, --eval string            Evaluate expressions in string; print
                                 non-nil values
    -c cp, --classpath cp        Use colon-delimited cp for source
                                 directories and JARs
    -K, --auto-cache             Create and use .planck_cache dir for cache
    -k, --cache path             If dir exists at path, use it for cache
    -q, --quiet                  Quiet mode; doesn\'t print the banner
    -v, --verbose                Emit verbose diagnostic output
    -d, --dumb-terminal          Disable line editing / VT100 terminal
                                 control
    -s, --static-fns             Generate static dispatch function calls
    -n addr, --socket-repl addr  Enable a socket REPL where x is port or IP:port

  main options:
    -m ns-name, --main=ns-name   Call the -main function from a namespace
                                 with args
    -r, --repl                   Run a repl
    path                         Run a script from a file or resource
    -h, -?, --help               Print this help message and exit
    -l, --legal                  Show legal info (licenses and copyrights)

  The init options may be repeated and mixed freely, but must appear before
  any main option.

  Paths may be absolute or relative in the filesystem.
",
  ],
]
`;

exports[`print Functions printLegal should print the legal information to stdout 1`] = `
Array [
  Array [
    "
Lumo
----

Copyright (c) 2016 Antonio Nuno Monteiro
Distributed under the Eclipse Public License either version 1.0 or (at your
option) any later version.

Lumo may use the following copyrighted software, which use is hereby
acknowledged.


JSZip
-----

Copyright (c) 2009-2016 Stuart Knightley, David Duponchel, Franz Buchinger,
Antonio Afonso
MIT License


minimist
--------

Copyright (c) 2010 James Halliday (mail@substack.net)
MIT License


lazy-map
--------

Copyright (c) 2015 Artur Malabarba
Distributed under the Eclipse Public License either version 1.0 or (at your
option) any later version.


Parinfer
--------

Copyright (c) 2015 Shaun Williams and contributors
MIT License
",
  ],
]
`;
